syntax = "proto3";

package commu;

option go_package = "starlink/pb";

service SatCom{
    rpc CommuWizSat(stream Sat2BaseInfo) returns (stream Base2SatInfo);
    // 卫星作为client，向基站发信，两端都是流的方法
    rpc ReceiveFromUnity_template(stream Unity2BaseInfo_template) returns (stream Base2UnityInfo);
    // 可以用的方法，unity端持续发目标的坐标信息，基站持续接收并返回那些哪些卫星正在跟踪以及目标坐标信息
    rpc SendToUnity(stream Base2UnityInfo) returns (Unity2BaseInfo);
    // 最后需要实现的方法，基站作为client，持续发送卫星跟踪信息给unity端，unity最后返回一个message
}


message PositionInfo {
    string timestamp = 1;
    float alt = 2; // altitude
    float lat = 3; // latitude
    float lng = 4; // longitude
    string target_name = 5;
}


message SatelliteInfo{
    string sat_name = 1;
    PositionInfo sat_position = 2;
}

message Sat2BaseInfo{
    string sat_name = 1;
    PositionInfo sat_position = 2;
    bool find_target = 3;
    repeated PositionInfo target_position = 4;
}

message Base2SatInfo{
    PositionInfo base_position = 1;
    bool find_target = 2;
    repeated PositionInfo target_position = 3;
}

message Unity2BaseInfo{
    string msg = 1;
}

message Unity2BaseInfo_template{
    bool find_target = 1;
    repeated PositionInfo target_position = 2;
}

message Base2UnityInfo{
    bool find_target = 1;
    repeated PositionInfo target_position = 2;
    repeated SatelliteInfo tracking_sat = 3;
}
